# mntcontrol

./: Cargo.toml  README.md  mntconfig.toml.default
src/: main.rs  mntconfig.rs
src/routes/: index.rs
static/css/: style.css
static/js/: mntcontrol.js
templates/: index.html
